chore: fetchSingle() + IntelliJ warnings + CVE-2025-49146 postgresql bump (#136)
## Summary

- Replace all `fetchOne()` calls with `fetchSingle()` across 6 jOOQ
repositories (`NoteRepository`, `ApprovalRepository`,
`ProjectRepository`, `JobRepository`, `BlockReasonRepository`,
`ProjectMemberRepository`) — `fetchSingle()` is non-null and throws
`NoDataFoundException` instead of silently returning `null`
- Replace `csrf -> csrf.disable()` lambda with
`AbstractHttpConfigurer::disable` method reference in `SecurityConfig`
- Bump `org.postgresql:postgresql` from `42.7.4` → `42.7.7` to fix
CVE-2025-49146 (CVSS 8.2) — channel binding bypass allowing MITM
attacks; overridden via `ext { set('postgresql.version', '42.7.7') }` in
build.gradle

Closes #130